--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 # DataSource settings: set here configurations for the database connection
 spring.datasource.url = jdbc:mysql://localhost:3306/platform_database
 spring.datasource.username = root
-spring.datasource.password =root
+spring.datasource.password =
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 # Specify the DBMS
 spring.jpa.database = MYSQL
