--- a/pom.xml
+++ b/pom.xml
@@ -77,19 +77,19 @@
 
 	<dependencies>
 
-<!-- 		<dependency> -->
-<!-- 		<groupId>org.jboss.portletbridge</groupId> -->
-<!-- 		<artifactId>portletbridge-api</artifactId> -->
-<!-- 		<version>3.3.0.Beta2</version> -->
-<!-- 		</dependency> -->
+		<dependency>
+		<groupId>org.jboss.portletbridge</groupId>
+		<artifactId>portletbridge-api</artifactId>
+		<version>3.3.0.Beta2</version>
+		</dependency>
 
 
-<!-- 		<dependency> -->
-<!-- 		<groupId>org.jboss.portletbridge</groupId> -->
-<!-- 		<artifactId>portletbridge-impl</artifactId> -->
-<!-- 		<version>3.3.0.Beta2</version> -->
-<!-- 		<scope>runtime</scope> -->
-<!-- 		</dependency> -->
+		<dependency>
+		<groupId>org.jboss.portletbridge</groupId>
+		<artifactId>portletbridge-impl</artifactId>
+		<version>3.3.0.Beta2</version>
+		<scope>runtime</scope>
+		</dependency>
 
 
 		<dependency>
@@ -291,7 +291,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>gestion-reservations-resources</finalName>
+		<finalName>resources-management</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
